# gera

./: .pre-commit-config.yaml  README.md  TASKS.md  create_sample_data.py  index.html  package.json  pyproject.toml  vite.config.ts
.github/: copilot-instructions.md
.github/workflows/: build.yml  test.yml
agents/: GUIDELINES.md  STATUS.md  TASKS.md  UI-refactor.md  UI-spec.md  data-model-spec.md  frontend-tasks.md  note-editor-plan.md  project-spec.md
scripts/: migrate_gcal_ids.py
scripts/linux/: build.sh
scripts/macos/: build.sh
scripts/windows/: build.ps1
specs/: data-model-spec.md
src/: App.css  App.tsx  MarkdownPreview.tsx  api.ts  main.tsx
src-tauri/: Cargo.toml  pyproject.toml  tauri.bundle.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  oauth.rs
src-tauri/src-python/gera/: __init__.py  __main__.py  app.py  entities.py  errors.py  filesystem.py  frontmatter.py  paths.py  renderer.py  repository.py  state.py  utils.py  watcher.py
src-tauri/src-python/gera/entities/: __init__.py  event.py  event_metadata.py  note.py  project.py  task.py  time_reference.py
src-tauri/src-python/gera/service/: __init__.py  events.py  google_calendar.py  notes.py  projects.py  tasks.py
src-tauri/src-python/tests/: conftest.py  test_entities.py  test_filesystem.py  test_frontmatter.py  test_google_calendar.py  test_integration.py  test_renderer.py  test_repository_read.py  test_repository_write.py  test_service_events.py  test_service_notes.py  test_service_projects.py  test_service_tasks.py  test_task_parsing.py
src/components/accounts/: GoogleAccountsModal.tsx
src/components/calendar/: CalendarGrid.tsx  CalendarHeader.test.tsx  CalendarHeader.tsx  CalendarView.tsx  EventBlock.test.tsx  EventBlock.tsx  EventCreateModal.test.tsx  EventCreateModal.tsx  EventEditModal.test.tsx  EventEditModal.tsx
src/components/command-palette/: CommandPalette.css  CommandPalette.test.tsx  CommandPalette.tsx
src/editor/: GeraRefChip.css  GeraRefChip.tsx  GeraRefNode.tsx  GeraRefTypeahead.css  GeraRefTypeahead.tsx  NoteEditor.css  NoteEditor.test.tsx  NoteEditor.tsx  PlainTextEditor.css  PlainTextEditor.tsx  geraRefVisitors.ts  geraRefsPlugin.ts  remarkGeraRefs.ts
src/hooks/: useCalendarUtils.ts  useFocusTrap.ts  useGeraSync.test.ts  useGeraSync.ts  useKeyboard.test.ts  useKeyboard.ts  useNoteFiltering.test.ts  useNoteFiltering.ts  useTaskFiltering.test.ts  useTaskFiltering.ts  useTour.ts  useWindowWidth.ts
src/stores/: useAppStore.test.ts  useAppStore.ts  useCalendarStore.test.ts  useCalendarStore.ts
src/styles/: components.css  layout.css  variables.css  views.css
src/types/: index.ts  keybindings.ts
src/utils/: dateFormatting.test.ts  dateFormatting.ts  deduplication.test.ts  deduplication.ts  eventPositioning.test.ts  eventPositioning.ts  frontmatter.test.ts  frontmatter.ts  taskFormatting.test.ts  taskFormatting.ts
workflows/: publish.yaml
(+43 files in other folders)
