[package]
name = "gera"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "gera_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
# the same as the package name
name = "gera"
path = "src/main.rs"
required-features = ["pytauri/standalone"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pyo3 = { version = "0.25" }
pytauri = { version = "0.8", features = [] }
tauri-plugin-pytauri = { version = "0.8" }
yoauth = { git = "https://github.com/petereon/yoauth-rs.git", tag = "0.3.0"}
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-app-kit = { version = "0.2", features = ["NSColor", "NSWindow"] }
objc2-foundation = "0.2"

[profile.bundle-dev]
inherits = "dev"

[profile.bundle-release]
inherits = "release"
